deploy/k8s/fit-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fit-production
  labels:
    name: fit-production
    environment: production
