deploy/k8s/fit-database.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: fit-mysql
  namespace: fit-production
spec:
  serviceName: fit-mysql
  replicas: 1
  selector:
    matchLabels:
      app: fit-mysql
  template:
    metadata:
      labels:
        app: fit-mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-data
          mountPath: /var/lib/mysql
  volumeClaimTemplates:
  - metadata:
      name: mysql-data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: fit-mysql
  namespace: fit-production
spec:
  ports:
  - port: 3306
  selector:
    app: fit-mysql
